--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "heroku-postbuild": "cd frontend && yarn install && npm start"
+    "heroku-postbuild": "cd frontend && yarn install && yarn run build"
   }
 }
